# compiler_assisted

./: .gitignore  CMakeLists.txt  RuntimeAddr.cpp  RuntimeAddr.h  a.out  access  access.c  access_2  access_2.c  access_3  access_3.bc  access_3.c  access_3_instru  launch_bench  launch_bench.c  rtlib.c  shared_header.h  stream  stream.c  test
mk_char_dev/: Makefile  my_char_device.c  my_char_device.mod.c  re_ins.sh  stop  stop.c  user_space  user_space.c
passes/: CMakeLists.txt  RuntimeAddr.cpp
passes_pr/: CMakeLists.txt  RuntimeAddrPr.cpp
prod_cons/: Makefile  chardev_mmap.c  chardev_mmap.mod.c  chardev_shm.c  chardev_shm.mod.c  user_app  user_app.c
test_passes/: CMakeLists.txt  SharedModuleChecker.cpp  sharedModuleChecker.cpp
